# LiftOff

./: .gitignore  LICENSE  LIFTOFF_CLAUDECODE.md  README.md  package-lock.json  package.json  tsconfig.json
docs/: CNAME  index.html
src/: App.jsx  constants.ts  i18n.js  main.jsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ControllerTestWidget.tsx  FileBrowser.tsx  GamepadBtn.tsx  GamepadKeyboard.tsx  SectionTabBar.tsx  SectionTabHeader.tsx  SettingsSubGroup.jsx
src/components/layout/: AppBottomBar.tsx  AppHeader.tsx
src/components/modals/: AddEntryModal.tsx  ColPickerModal.tsx  CollectionManagerModal.tsx  ConfirmModal.tsx  ContextMenuModal.tsx  EditNameModal.tsx  FolderManagerModal.tsx  HideModal.tsx  LibraryActionsModal.tsx  ModalShell.tsx
src/components/ui/: CollapsibleGroup.tsx  ToggleKnob.tsx  gamepad.tsx  index.ts
src/contexts/: GamepadContext.tsx  SettingsContext.tsx  ThemeContext.tsx
src/locales/: en.json  fr.json
src/utils/: gamepad.js  gamepad.ts
src/views/: settings.tsx
