[package]
name = "liftoff"
version = "1.1.0"
description = "LiftOff — gamepad-first game launcher"
authors = ["taylo"]
edition = "2021"

[lib]
name = "liftoff_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
lodepng = "3"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
urlencoding = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Power",
] }
